# xn--ts9h

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  🥺.8
src/: main.rs
