[package]
name = "xn--ts9h"
description = "A simpler sudo command, named xn--ts9h because I can't use an emoji in the package name"
license = "MIT"
authors = [ "Xe Iaso <me@xeiaso.net>" ]
version = "0.1.0"
edition = "2021"

[package.metadata.deb]
assets = [
  ["target/release/xn--ts9h", "usr/bin/🥺", "6755"],
  ["README.md", "usr/share/doc/🥺/README", "644"],
  ["LICENSE", "usr/share/doc/🥺/LICENSE", "644"],
  ["🥺.8", "usr/share/man/man8/🥺.8", "644"],
]

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/xn--ts9h", dest = "/usr/bin/🥺", mode = "6755"},
  { source = "README.md", dest = "/usr/share/doc/🥺/README", mode = "644", doc = true},
  { source = "LICENSE", dest = "/usr/share/doc/🥺/LICENSE", mode = "644", doc = true},
  { source = "🥺.8", dest = "/usr/share/man/man8/🥺.8", mode = "644", doc = true},
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syslog = "6"

[profile.release]
strip = true
opt-level = "z"
lto = true